--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body>
 
-<div id="page">
+<div class="page">
 
-    <div id="logo">
-        <div id="icon"></div>
-        <div id="movieAppLabel"></div>
+    <div class="logo">
+        <div class="icon"></div>
+        <div class="movieAppLabel"></div>
     </div>
 
-    <div id="holder">
+    <div class="holder">
     	<form action="http://www.themoviedb.org/search" method="post" target="_blank">
             <fieldset>
             	<input type="text" id="movieName" name="search" />
