--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Movie App</title>
-
+<title>The Not That Cool DB</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 
 </head>
@@ -25,12 +24,21 @@
         </form>
         <a href="#" class="button">Submit</a>
     </div>
+    <div class="contentContainer">
+
+    <div class="movieReturn">
+      <h3>Here is the info you requested</h3>
+    </div>
+
+  </div>
+
 
 
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js"></script>
-<script src="script.js"></script>
+<script src="app.js"></script>
+<script src="collections.js"></script>
+<script src="model.js"></script>
+<script src="views.js"
 </body>
 </html>
