updated JS info

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
 <title>The Not That Cool DB</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 
+  <script type="text/template" id="postTmpl">
+      <h2><%= Title %></h2>
+      <img src='<%= moviePoster %>'></img>
+      <p><%= plotDescription %></p>
+      <h3><%= movieRating %></h3>
+  </script>
+
+
 </head>
 
 <body>
+
+
 
 <div class="page">
 
