--- a/index.html
+++ b/index.html
@@ -34,21 +34,23 @@
         </form>
         <a href="#" class="button">Submit</a>
     </div>
+
     <div class="contentContainer">
 
     <div class="movieReturn">
       <h3>Here is the info you requested</h3>
     </div>
 
-  </div>
-
-
+    </div>
 
 </div>
-
+<script src="node_modules/jquery/dist/jquery.js"></script>
+<script src="node_modules/underscore/underscore.js"></script>
+<script src="node_modules/backbone/backbone.js"></script>
+<script src="data.js"></script>
 <script src="app.js"></script>
 <script src="collections.js"></script>
 <script src="model.js"></script>
-<script src="views.js"
+<script src="views.js"></script>
 </body>
 </html>
