--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 
 <body>
 
-
-
 <div class="page">
 
     <div class="logo">
@@ -48,9 +46,9 @@
 <script src="node_modules/underscore/underscore.js"></script>
 <script src="node_modules/backbone/backbone.js"></script>
 <script src="data.js"></script>
-<script src="app.js"></script>
-<script src="collections.js"></script>
-<script src="model.js"></script>
-<script src="views.js"></script>
+<script src="js/app.js"></script>
+<script src="js/collections.js"></script>
+<script src="js/model.js"></script>
+<script src="js/views.js"></script>
 </body>
 </html>
