--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <script type="text/template" id="postTmpl">
       <h2><%= Title %></h2>
-      <img src='<%= moviePoster %>'></img>
-      <p><%= plotDescription %></p>
-      <h3><%= movieRating %></h3>
+      <img src='<%= MoviePoster %>'></img>
+      <p><%= PlotDescription %></p>
+      <h3><%= MovieRating %></h3>
   </script>
 
 
@@ -21,21 +21,22 @@
 
     <div class="logo">
         <div class="icon"></div>
-        <div class="movieAppLabel"></div>
+        <h1>The Not So Cool MDB</h1>
+        <div class="MovieAppLabel"></div>
     </div>
 
     <div class="holder">
     	<form action="http://www.themoviedb.org/search" method="post" target="_blank">
             <fieldset>
-            	<input type="text" id="movieName" name="search" />
+            	<input type="text" id="MovieName" name="search" />
             </fieldset>
         </form>
         <a href="#" class="button">Submit</a>
     </div>
 
-    <div class="contentContainer">
+    <div class="ContentContainer">
 
-    <div class="movieReturn">
+    <div class="MovieReturn">
       <h3>Here is the info you requested</h3>
     </div>
 
@@ -47,8 +48,8 @@
 <script src="node_modules/backbone/backbone.js"></script>
 <script src="data.js"></script>
 <script src="js/app.js"></script>
-<script src="js/collections.js"></script>
 <script src="js/model.js"></script>
+<script src="js/collection.js"></script>
 <script src="js/views.js"></script>
 </body>
 </html>
