--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <script type="text/template" id="postTmpl">
       <h2><%= Title %></h2>
-      <img src='<%= MoviePoster %>'></img>
+      <img src='<%= MoviePoster %>'class="img-responsive" alt="Responsive image"></img>
       <p><%= PlotDescription %></p>
       <h3><%= MovieRating %></h3>
   </script>
@@ -39,6 +39,10 @@
     <div class="MovieReturn">
       <h3>Here is the info you requested</h3>
     </div>
+
+    </div>
+
+    <div id="container">
 
     </div>
 
