--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <script type="text/template" id="postTmpl">
       <h2><%= Title %></h2>
-      <img src='<%= MoviePoster %>'class="img-responsive" alt="Responsive image"></img>
+      <img src='<%= MoviePoster %>'class="img-responsive" alt="Responsive image"/>
       <p><%= PlotDescription %></p>
       <h3><%= MovieRating %></h3>
   </script>
